add code, hookup button, not tested

--- a/TextureBrowser/TextureBrowser.uplugin
+++ b/TextureBrowser/TextureBrowser.uplugin
@@ -2,8 +2,8 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "0.1",
-	"FriendlyName": "My Plugin",
-	"Description": "A template for your Unreal Python plugin",
+	"FriendlyName": "TextureBrowser",
+	"Description": "Browser textures in Unreal, e.g. search for icons included in the Unreal installation",
 	"Category": "tool",
 	"CreatedBy": "Hannes",
 	"CreatedByURL": "",
